# Lazarus

./: .gitignore  CMakeLists.txt  Doxyfile
src/: BaseObject.cpp  BaseObject.h  BasicBuffer.cpp  BasicBuffer.h  Beep.cpp  Beep.h  Buffer.cpp  Buffer.h  CMakeConfig.h  CMakeConfig.h.in  CMakeLists.txt  CSVReader.cpp  CSVReader.h  CompressionBox.cpp  CompressionBox.h  Config.h  DLLoader.cpp  DLLoader.h  GridStructure.cpp  GridStructure.h  Jiffies.cpp  Jiffies.h  LogBook.cpp  LogBook.h  PrimitiveBuffer.cpp  PrimitiveBuffer.h  Serializable.cpp  Serializable.h  SerializableDummyClass.cpp  SerializableDummyClass.h  SerializationStack.h  Toolbox.cpp  Toolbox.h  UnitTest.cpp  UnitTest.h
src/DataStructures/: Block.h  Eraser.h  FastKTuple.h  FastNCDList.h  FastNCSList.h  FastVectorN.h  Fifo.h  GenKTuple.h  GenList.h  GenListElement.h  GenNCDList.h  GenNCDListElement.h  GenNCSList.h  GenNCSListElement.h  GenericIterator.h  Image.h  ImageGrid.h  KTuple.h  Matrix.h  MetaInf.h  NCDList.h  NCSList.h  Primitive.h  Queue.h  RingBuffer.h  RingBufferO.h  ThreadSafeUnorderedMap.h  UnionFind.cpp  UnionFind.h  VectorN.h
src/Encryption/: Base64.cpp  Base64.h
src/Encryption/BlockCiphers/: 3DESBox.cpp  3DESBox.h  AESBox.cpp  AESBox.h  AnubisBox.cpp  AnubisBox.h  BlowfishBox.cpp  BlowfishBox.h  Cast5Box.cpp  Cast5Box.h  CipherBox.cpp  CipherBox.h  CipherCascade.cpp  CipherCascade.h  DESBox.cpp  DESBox.h  KasumiBox.cpp  KasumiBox.h  KhazadBox.cpp  KhazadBox.h  NoekeonBox.cpp  NoekeonBox.h  RC2Box.cpp  RC2Box.h  RC5Box.cpp  RC5Box.h  RC6Box.cpp  RC6Box.h  SaferpBox.cpp  SaferpBox.h  SeedBox.cpp  SeedBox.h  SkipjackBox.cpp  SkipjackBox.h  TomCryptWrapper.cpp  TomCryptWrapper.h  TwofishBox.cpp  TwofishBox.h  XTeaBox.cpp  XTeaBox.h
src/Encryption/HashFunctions/: HashFunction.cpp  HashFunction.h  MD2HashFunction.cpp  MD2HashFunction.h  MD4HashFunction.cpp  MD4HashFunction.h  MD5HashFunction.cpp  MD5HashFunction.h  RMD128HashFunction.cpp  RMD128HashFunction.h  RMD160HashFunction.cpp  RMD160HashFunction.h  RMD256HashFunction.cpp  RMD256HashFunction.h  RMD320HashFunction.cpp  RMD320HashFunction.h  SHA1HashFunction.cpp  SHA1HashFunction.h  SHA224HashFunction.cpp  SHA224HashFunction.h  SHA256HashFunction.cpp  SHA256HashFunction.h  SHA384HashFunction.cpp  SHA384HashFunction.h  SHA512HashFunction.cpp  SHA512HashFunction.h  Tiger192HashFunction.cpp  Tiger192HashFunction.h  WhirlpoolHashFunction.cpp  WhirlpoolHashFunction.h
src/Encryption/PKCryptography/: DHKeyExchange.cpp  DHKeyExchange.h  RSA.cpp  RSA.h  RSAKey.cpp  RSAKey.h
src/Encryption/PRNG/: FortunaPRNG.cpp  FortunaPRNG.h  PRNG.cpp  PRNG.h  RC4PRNG.cpp  RC4PRNG.h  SecurePRNG.cpp  SecurePRNG.h  Sober128PRNG.cpp  Sober128PRNG.h  (+2 more)
src/FileSystem/: Directory.cpp  Directory.h  DirectoryDB.cpp  DirectoryDB.h  DirectoryEntry.cpp  DirectoryEntry.h  File.cpp  File.h
src/IPC/: SemaphoreSetSysV.cpp  SemaphoreSetSysV.h  SharedMemory.cpp  SharedMemory.h  SharedMemoryPOSIX.cpp  SharedMemoryPOSIX.h  SharedMemorySysV.cpp  SharedMemorySysV.h  SharedMutex.cpp  SharedMutex.h  SharedMutexFactory.cpp  SharedMutexFactory.h  SharedRWMutex.cpp  SharedRWMutex.h  SharedSemaphore.cpp  SharedSemaphore.h  SharedSemaphoreFactory.cpp  SharedSemaphoreFactory.h
src/ImageProcessing/: ClosingFilter.h  ConvolutionFilter.h  DilationFilter.h  EdgeDetector.h  EmbeddingFilter.h  ErosionFilter.h  ImageDecorator.cpp  ImageDecorator.h  ImageProcessingToolbox.cpp  ImageProcessingToolbox.h  ImageReaderWriter.h  JPEGCompressionBox.h  JPEGReaderWriter.h  OpeningFilter.h  PNGReaderWriter.h  SmartImageReaderWriter.h  ThresholdFilter.h  WeightedMeanFilter.h
src/Network/: CURLWrapper.cpp  CURLWrapper.h  ClientFactory.cpp  ClientFactory.h  CommunicationFacility.cpp  CommunicationFacility.h  ConnectCallback.cpp  ConnectCallback.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionPoll.cpp  ConnectionPoll.h  DisconnectCallback.cpp  DisconnectCallback.h  EthernetHeader.cpp  EthernetHeader.h  GenericCallback.cpp  GenericCallback.h  GenericConnection.cpp  GenericConnection.h  IPv4Header.cpp  IPv4Header.h  NetworkBlock.h  NetworkNode.cpp  NetworkNode.h  Observable.h  PacketSocket.cpp  PacketSocket.h  SHUFacility.h  ServerFactory.cpp  ServerFactory.h  SharedMemSHUComStruct.cpp  SharedMemSHUComStruct.h  Socket.cpp  Socket.h  SocketFactory.cpp  SocketFactory.h  SynchronizationCallback.cpp  (+21 more)
src/Scheduling/: Process.cpp  Process.h  ProcessHelper.cpp  ProcessHelper.h  ProcessMemMap.cpp  ProcessMemMap.h  ProcessToolbox.cpp  ProcessToolbox.h  ProcessWatchDog.h  Tracer.cpp  Tracer.h  UsageLimiter.cpp  UsageLimiter.h
src/Sensors/: LibSensors.cpp  LibSensors.h  SystemSensors.cpp  SystemSensors.h
src/System/: CommandToolbox.cpp  CommandToolbox.h  Interface.cpp  Interface.h  InterfaceToolbox.cpp  InterfaceToolbox.h  NetworkInterface.cpp  NetworkInterface.h  SystemCPU.cpp  SystemCPU.h  SystemDisk.cpp  SystemDisk.h  SystemGroup.cpp  SystemGroup.h  SystemInformation.cpp  SystemInformation.h  SystemStatus.cpp  SystemStatus.h  SystemUser.cpp  SystemUser.h  TinyNode.cpp  TinyNode.h
src/Threading/: Callback.cpp  Callback.h  CallbackQueue.cpp  CallbackQueue.h  FunctionTask.h  Mutex.cpp  Mutex.h  MutexLocker.cpp  MutexLocker.h  ObjectCallback.h  PersistentCallbackQueue.cpp  PersistentCallbackQueue.h  ReadWriteLock.cpp  ReadWriteLock.h  Semaphore.cpp  Semaphore.h  Task.cpp  Task.h  TaskHelper.h  TaskQueueThread.cpp  TaskQueueThread.h  Thread.cpp  Thread.h  ThreadBlockGridStructure.cpp  ThreadBlockGridStructure.h  ThreadFunctionTask.h  ThreadObjectCallback.h  ThreadPool.cpp  ThreadPool.h
src/Time/: AsynchronousTimer.cpp  AsynchronousTimer.h  SynchronousTimer.cpp  SynchronousTimer.h  TimeToolbox.cpp  TimeToolbox.h  Timer.cpp  Timer.h
src/XML/: ConfigReader.cpp  ConfigReader.h  ConfigReaderMarkI.cpp  ConfigReaderMarkI.h  ConfigWriterMarkI.cpp  ConfigWriterMarkI.h  SimpleXML.cpp  SimpleXML.h  SimpleXMLExtended.cpp  SimpleXMLExtended.h  XMLConfigMarkIParameters.cpp  XMLConfigMarkIParameters.h  XMLConfigMarkISection.cpp  XMLConfigMarkISection.h  XMLConfigParameter.cpp  XMLConfigParameter.h
(+84 files in other folders)
